--- a/main_custom.css
+++ b/main_custom.css
@@ -270,3 +270,6 @@ input:checked+.sliderSml {
     text-shadow: 2px 2px 4px #000;
     font-size: 32px;
 }
+#ammoMax, #ammoVal, #maxHP, #healthVal {
+    text-shadow: 2px 2px 4px #000 !important;
+}
