--- a/main_custom.css
+++ b/main_custom.css
@@ -65,8 +65,9 @@
 .button:hover {
 	color: rgb(255, 255, 255) !important;
 	text-shadow: #6d6d6d3b !important;
-	background-color: #6d6d6d3b !important;
+	background-color: #6d6d6d13 !important;
 	box-shadow: inset 0 0 7px rgb(0, 0, 0) !important;
+	border-radius: 2px !important;
 }
 
 .menuItem {
@@ -76,8 +77,10 @@
 .menuItem:hover {
 	color: rgb(255, 255, 255) !important;
 	text-shadow: #8d8d8d !important;
-	background-color: #6d6d6d3b !important;
+	background-color: #6d6d6d13 !important;
 	box-shadow: inset 0 0 7px rgb(0, 0, 0) !important;
+	border-left: none;
+	border-radius: 2px !important;
 }
 
 .iconProfile,
@@ -227,20 +230,7 @@
 }
 
 #chatInput {
-    color: #fff;
 	background-color: transparent !important;
-    border-radius: 0px;
-    transform: scale(0);
-    height: 0;
-    padding: 0;
-    transition-duration: 0.25s;
-    font-size: 16px;
-}
-
-#chatInput:focus {
-    height: 100%;
-    padding: 8px 16px;
-    transform: scale(1);
 }
 
 #bubbleContainer {
@@ -313,10 +303,6 @@ input:checked+.sliderCent:before {
 	transition-duration: 0.25s;
 }
 
-.menuItem:hover {
-	border-left: none;
-}
-
 #loadingBg {
 	background-image: url(https://cdn.discordapp.com/attachments/795732173667303447/834686393183764486/loading-opaque.gif);
 }
@@ -326,53 +312,62 @@ input:checked+.sliderCent:before {
 }
 
 #uiBase.onMenu #spectButton {
-	z-index: 1;
-	width: 96px;
-	top: 50%;
+    width: 48px;
+    top: unset;
+    bottom: 20px;
+    right: calc(50% - 50px);
+    left: unset;
 }
 
 #spectButton span[style="font-size:15px;color:rgba(255,255,255,0.6)"] {
-	color: transparent !important;
+    color: transparent !important;
 }
 
 #spectButton .switchsml {
-	margin: 0;
-	position: absolute;
-	width: 100%;
-	margin-left: 950px;
-	margin-top: 550px;
+    margin: 0;
+    position: absolute;
+    width: 100%;
 }
 
 .sliderSml {
-	opacity: 1;
+    opacity: 1;
 }
 
 .sliderSml::before {
-	content: "Spectate";
-	font-size: 20px;
-	color: white;
-	width: max-content;
-	height: auto;
-	background-color: transparent;
-	text-align: center;
-	transition-duration: 0.25s;
-	text-shadow: 2px 2px 4px #000;
+    content: "Spectate";
+    font-size: 20px;
+    color: white;
+    width: max-content;
+    height: auto;
+    background-color: transparent;
+    text-align: center;
+    transition-duration: 0.25s;
+}
+
+.sliderSml::before {
+    content: "visibility_off";
+    font-size: 32px;
+    color: white;
+    width: max-content;
+    height: auto;
+    background-color: transparent;
+    text-align: center;
+    transition-duration: 0.25s;
+    font-family: 'Material Icons';
 }
 
 input:checked+.sliderSml::before {
-	content: "Spectating";
-	transform: translateX(-12px);
-	color: black !important;
-	text-shadow: 2px 2px 4px rgb(255, 255, 255);
+    content: "visibility";
+    transform: unset;
 }
 
 input:checked+.sliderSml {
-	background-color: transparent !important;
+    background-color: transparent !important;
 }
 
 .sliderSml {
-	opacity: 1;
-	background-color: transparent;
+    opacity: 1;
+    background-color: transparent;
 }
 
 .countIcon {
