--- a/main_custom.css
+++ b/main_custom.css
@@ -104,7 +104,7 @@
 	content: ' ms';
 	font-size: 18px;
 	letter-spacing: 1px;
-	text-shadow: 2px 2px 4px #fff;
+	text-shadow: 2px 2px 4px rgb(0, 0, 0);
 	color: #8d8d8d;
 }
 
@@ -119,7 +119,7 @@
 	content: ' fps';
 	font-size: 18px;
 	letter-spacing: 1px;
-	text-shadow: 2px 2px 4px #fff;
+	text-shadow: 2px 2px 4px rgb(0, 0, 0);
 	color: #8d8d8d;
 }
 
@@ -380,12 +380,12 @@ input:checked+.sliderSml {
 #ammoMax,
 #ammoVal,
 #maxHP,
-#healthVal {
+#healthValue {
 	text-shadow: 2px 2px 4px #000 !important;
 }
 
 .endCard {
-	background-color: rgba(255, 255, 255, 0.26) !important;
+	background-color: rgba(255, 255, 255, 0.089) !important;
 }
 
 
