--- a/main_custom.css
+++ b/main_custom.css
@@ -119,7 +119,7 @@
 	content: ' fps';
 	font-size: 18px;
 	letter-spacing: 1px;
-	text-shadow: 2px 2px 4px rgb(0, 0, 0);
+	text-shadow: none !important;	
 	color: #8d8d8d;
 }
 
@@ -215,7 +215,7 @@
 
 #mainLogo {
 	content: url(https://cdn.discordapp.com/attachments/756798771160940597/834062549535817778/assssssssssss.png) !important;
-	transform: scale(0.5) !important;
+	transform: scale(0.25) !important;
 	margin-top: 5% !important;
 	transform: rotate(-10deg) !important;
 }
