--- a/som_main.css
+++ b/som_main.css
@@ -811,3 +811,16 @@ input:checked+.optCheck {
 #leaderContainer i[style*="color:#40C4FF"] {
     color: var(--verification) !important;
 }
+
+/* killstreakholder */
+
+#killStreakHolder,
+#killsStreakHolder
+
+/*i legit dont know which one it is soooo dont mind this */{
+    position: fixed !important;
+    transform: translate(-50%, -50%) !important;
+    left: 95% !important;
+    bottom: 2% !important;
+    background-color: var(--menu-bg) !important;
+}
