--- a/som_main.css
+++ b/som_main.css
@@ -734,7 +734,7 @@ input:checked+.optCheck {
     padding-top: 0;
     padding-left: 0;
     transform: none;
-    background-image: linear-gradient(var(--accent), var(--accent)) !important;
+    background-image: linear-gradient(var(--menu-bg), var(--accent)) !important;
 }
 
 #ammoVal {
